# KalmanFilterBallTracking

./: .gitignore  CMakeLists.txt  KalmanFilterBallTracking  Makefile  README.md  build_cmake.sh  download_libraries.sh  kalman_filter_ball_tracking  kalman_filter_ball_tracking.cpp  third_party_libraries_download.sh
.run/: KalmanFilterBallTracking.run.xml  practice2.run.xml  practice3.run.xml
data/: .gitignore
data/ball_orange/: times.txt
data/ball_red/: video.mkv
data/ball_tennis/: times.txt
doc/: ball_tracking_kalman_filter_extended.ipynb
doc/analysis/: analysis_r_velocity_acceleration.ipynb  analysis_x_velocity_acceleration.ipynb  ball_tracking_kalman_filter_extended.ipynb  ball_tracking_kalman_filter_extended2.ipynb  ball_tracking_kalman_filter_extended_implicit.ipynb  test.ipynb  test_K.ipynb
lib/arturoemx/: .gitignore
practice1/: README.md  practice1.ipynb
practice2/: .gitignore
practice2/.run/: compile_latex_practice2.run.xml
practice2/src/: main.tex  practice2.tex
practice2/src/tex/: conditional_probability.tex  expected_value.tex
practice3/: .gitignore
practice3/src/: practice3.tex
practice4-kalman_filter/: MouseTracker.py  MouseTrackerManually.py
practice4-kf_mouse/: MouseTracker.py  main_kalman_filter.py  test1.py
practice4-kf_mouse/byArturo/KalmanRaton2/: CMakeLists.txt  EjemploRaton.cpp  EjemploRaton2.cpp  Makefile
practice5/: CMakeLists.txt  SegColorLab.cpp  lib_arturo.h  main.cpp  tools.h
practice5-ball_tracking/: ball_tracking.ipynb  ball_tracking_kalman_filter_extended_implicit.ipynb
practice5-ball_tracking/practice5/: .gitignore  CMakeLists.txt  SegColorLab.cpp
practice5-ball_tracking/practice5/lib/: tools.h
practice5-ball_tracking/practice5/lib/arturo/: Circle.cpp  clone Circle.sh  clone Curvature.sh  functions.h
practice5-ball_tracking/practice5/lib/dayan/: BallTrackingKalmanFilterExtended.h  BallTrackingKalmanFilterExtendedImplicit.h  Config.h  KalmanFilter.h  KalmanFilterExtended.h  KalmanFilterExtendedImplicit.h  KalmanFilterType.h  functions.h  tools.h
practice5-ball_tracking/practice5/media/ball_green/: ball_green_times.txt
practice5-ball_tracking/practice5/media/ball_orange/: k.yaml  radio.txt
practice5-ball_tracking/practice5/media/ball_red/: radio.txt  times.txt
practice5-ball_tracking/practice5/media/ball_tenis/: out_camera_data-EstBay.xml
practice5-ball_tracking/practice5/media/ball_tennis/: k.yaml  radio.txt
practice5/lib/: Circle.h  lib_arturo.h  tools.h
practice6-kf_conic/: conical_kalman_filter_extended_implicit.ipynb  kalman_conical.ipynb
src/ball_tracking/: BallTrackingKalmanFilterExtended.h  BallTrackingKalmanFilterExtended2.h  BallTrackingKalmanFilterExtendedImplicit.h  BallTrackingKalmanFilterExtended_6x6.h  BallTrackingKalmanFilterExtended_9x8.h  BallTrackingKalmanFilterExtended_9x9.h  BallTrackingKalmanFilterUnscented.h
src/kf/: KalmanFilter.h  KalmanFilterExtended.h  KalmanFilterExtendedImplicit.h  KalmanFilterType.h  KalmanFilterUnscented.h
src/tools/: Config.h  functions.h  tools.h
third_party_libraries/arturoemx/: .gitignore
